--- a/BatchPortal/Pages/_ViewImports.cshtml
+++ b/BatchPortal/Pages/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using BatchPortal
+@using BatchPortal.Models
 @using BatchPortal.Shared
+@using Humanizer
 @namespace BatchPortal.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, BatchPortal
